<resources>
    <string name="app_name">ProjektiNeAndroid</string>
    <string name="regjistrohu">Regjistrohu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmenti1">Fragmenti1</string>
    <string name="fragmenti2">fragmenti2</string>
    <string name="Fragmenti1">Fragmenti1</string>
    <string name="Fragmenti2">Fragmenti2</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="Tic_Tac_Toe">Tic Tac Toe</string>
    <string name="historiku">Historiku</string>
    <string name="paragrafi">Një version i hershëm i tik-tak-toe u luajt në Perandorinë Romake, rreth shekullit të parë para Krishtit.
Lojërat e luajtura  "tre-në-një-rresht" jane gjetur në Egjiptin e lashtë neper pllaka te çative, që datojnë rreth vitit 1300 pes.
Quhej "terni lapilli" (tre guralecë në të njëjtën kohë) secili lojtar kishte vetëm tre gure, kështu që duhej ti lëviznin ato në hapësira boshe për të vazhduar lojën. Emrat të lojës janë të ndryshem, emri britanik në një botim të shënimeve dhe pyetjeve u shfaq në vitin 1858 e quajtur "noughts and crosses". Referencimi i pare per kete lojë si "tik-tak-toe" e be në vitin 1884, e cila  i referohej edhe një loje për fëmijë, qe luhej me sy të mbyllur. Emri "Tic-tac-toe" gjithashtu mund të burojë nga "tik-tak", emri i një versioni të vjetër të përshkruar për herë të parë në 1558. Riemërimi amerikan i "noughts and crosss" si "tic-tac-toe" ndodhi në Shekulli 20.</string>
    <string name="zmadho">Zmadho</string>
    <string name="toast">toast</string>
    <string name="Mesazh">Mesazh</string>
    <string name="Mesazhi" />
    <string name="ZmadhoTekstin">Zmadho Tekstin</string>
    <string name="text">text</string>
    <string name="luaj">Luaj</string>
    <string name="lojtari_i_dyte">Lojtari i dyte</string>
    <string name="lojtari_i_pare">Lojtari i pare</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="register">REGISTER</string>
    <string name="choose_image">Choose Image</string>
</resources>
