<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_above="@+id/btnAnime">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TicTacToe"
        android:textColor="@android:color/white"
        android:text="@string/Tic_Tac_Toe"
        android:textSize="50sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/historiku"
        android:background="#fff"
        android:layout_below="@+id/TicTacToe"
        android:text="@string/historiku"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#032b5f"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/historiku">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/paragrafi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="@android:dimen/app_icon_size"
                android:text="@string/paragrafi"
                android:textColor="#fff"
                android:textSize="13sp" />

        </ScrollView>

        <Button
            android:id="@+id/btn_zmadho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="225dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:background="#032b5f"
            android:text="@string/ZmadhoTekstin" />

        <Button
            android:id="@+id/btn_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="225dp"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="32dp"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:background="#032b5f"
            android:text="@string/Mesazh" />

    </RelativeLayout>








</RelativeLayout>